# typp

./: .gitignore  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  TODO  checklist.md  checklist.txt  configure.ac  main.c  texts.c
man/: typp.6
src/: Makefile.am  client.c  main.c  main.h  texts.c
